--- a/bajpaicumputer/public/index.html
+++ b/bajpaicumputer/public/index.html
@@ -7,9 +7,32 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to earningappsolutions.online, the ultimate destination for downloading Teen Patti casino games and unlocking the thrilling opportunity to earn real money. We are dedicated to providing an immersive gaming experience that combines the excitement of Teen Patti with the chance to win big"
     />
+    <meta
+      name="google-site-verification"
+      content="j5X4KZ0aC1ErcEKBFPAmtp9Bp4uT1y486AzY1gP6kM8"
+    />
+    <meta
+      name="keywords"
+      content="earn online money, teen Patti earning, EARN ONLINE MONEY,TEEN PATTI EARNING"
+    />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-VL37K43YLK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-VL37K43YLK");
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Bajpai Computer Institution</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
