working client screen

--- a/bajpaicumputer/public/index.html
+++ b/bajpaicumputer/public/index.html
@@ -17,6 +17,10 @@
       name="keywords"
       content="earn online money, teen Patti earning, EARN ONLINE MONEY,TEEN PATTI EARNING"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
     <!-- Google tag (gtag.js) -->
     <script
       async
