working on admin panel

--- a/bajpaicumputer/public/index.html
+++ b/bajpaicumputer/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Welcome to earningappsolutions.online, the ultimate destination for downloading Teen Patti casino games and unlocking the thrilling opportunity to earn real money. We are dedicated to providing an immersive gaming experience that combines the excitement of Teen Patti with the chance to win big"
-    />
+    <meta name="description" content="Bajpai Institutions" />
     <meta
       name="google-site-verification"
       content="j5X4KZ0aC1ErcEKBFPAmtp9Bp4uT1y486AzY1gP6kM8"
@@ -21,11 +18,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-VL37K43YLK"
-    ></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
